refactor 기능 변경 및 리펙토링 - closes #19